# youdontknowjack

./: .gitignore  CMakeLists.txt  CRI_MPV_CONTENT_PLAN.md  README.md  config.toml
docs/: BOOT_TRACE.txt
meta/: EBOOT.functions.json  EBOOT.functions.raw.json  EBOOT.image.json  EBOOT.imports.json  EBOOT.loader.json  elf_analysis.json
prx/: libsre.func0.json  libsre.imports.json
prx/libsre_ns/: libsre_exports.c  libsre_externs.cpp  ppu_recomp.c  ppu_recomp.h
prx/spu_kernel/: README.txt
prx/spu_kernel/lift_a/: spu_recomp.c  spu_recomp.h
prx/spu_kernel/lift_b/: spu_recomp.c  spu_recomp.h
prx/spu_kernel/lift_pol/: spu_recomp.c  spu_recomp.h
src/: prx_init.cpp  ydkj_spurs_kernel.c
src/compat/: dirent.h  unistd.h
